# cloud-storage-emulator

./: Cargo.toml  Dockerfile  README.md
.github/workflows/: ci.yaml  e2e.yaml  e2e_ci.yaml
e2e/: .gitignore  README.md  create_bucket_test.go  delete_bucket_test.go  get_bucket_test.go  go.mod  go.sum  list_bucket_test.go  update_bucket_test.go
e2e/helper/: helper.go
src/: main.rs
src/api/handlers/: health.rs  mod.rs
src/api/handlers/context/: mod.rs
src/api/handlers/storage/: bucket.rs
src/api/models/: bucket.rs  mod.rs
src/api/routes/: mod.rs
src/api/routes/storage/: bucket.rs
src/flows/: bucket.rs
src/handler/: mod.rs
src/handler/storage/: bucket.rs
src/kernel/: bucket.rs
src/libs/: errors.rs  mod.rs  telemetry.rs
src/repositories/: bucket.rs
src/routes/: mod.rs
src/routes/storage/: bucket.rs
src/server/: context.rs  mod.rs
src/server/commands/: mod.rs
src/storage/: mod.rs
