[package]
name = "cloud-storage-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum_garde = "0.19.2"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
garde = { version = "0.19.2", features = ["derive", "pattern", "serde"] }
serde = { version = "1.0.203", features = ["derive"] }
snafu = { version = "0.8.3", features = ["backtrace"] }
strum = { version = "0.26.2", features = ["derive"] }
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
claim = "0.5.0"
rstest = "0.21.0"
googletest = "0.11.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
