[package]
name = "cloud-storage-emulator"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = { version = "0.7.5", features = ["macros"] }
axum_garde = "0.20"
chrono = { version = "0.4.38", features = ["serde"] }
clap = { version = "4.5.7", features = ["derive"] }
eyre = "0.6.12"
garde = { version = "0.20", features = ["derive", "pattern", "serde"] }
serde = { version = "1.0.203", features = ["derive"] }
strum = { version = "0.26.2", features = ["derive"] }
thiserror = "1.0.63"
tokio = { version = "1.38.0", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter", "json"] }

[dev-dependencies]
claim = "0.5.0"
rstest = "0.23.0"
googletest = "0.12.0"

[profile.release]
strip = true
opt-level = "z"
lto = true
panic = "abort"
